--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,6 @@ install:
 script:
   - cd decide
   - cp travis_local_settings.py local_settings.py
-  - ./manage.py test store -v2
+  - coverage run --branch --source=. ./manage.py test authentication --keepdb
+  - coverage run --branch --source=. ./manage.py test census --keepdb
+  - coverage xml
