--- a/vagrant/files.yml
+++ b/vagrant/files.yml
@@ -15,7 +15,7 @@
 
 - name: django local_settings.py
   become: yes
-  become_user: decide
+  become_user: practica
   copy:
     src: files/settings.py
     dest: /home/decide/decide/decide/local_settings.py
